# DongmenDBAutoTest

./: CMakeLists.txt  README.md  main.cpp  test_mysql_connector_c.cpp  test_mysql_connector_cpp.cpp  test_mysql_main.cpp
doc/: win7-mingw-x64-boost-1.6.8配置.txt
include/: Utils.h  monitor_test_cases_execution.h  mysqlconn_manager.h  mysqlconn_wrapper.h  simhash.h  test_execution.h  test_execution_config.h  test_simhash_experiment.h
include/dbscan/: datapoint.h  datapoint_mysqlconn_manager.h  dbscan.h
mysqlcppconn_1.1.11/include/cppconn/: version_info.h
mysqlcppconn_1.1.11/lib/: mysqlcppconn.lib
result/jplag_results_exercise2/: index.html  match0-0.html  match0-1.html  match0-link.html  match0-top.html  match0.html  match1-0.html  match1-1.html  match1-link.html  match1-top.html  match1.html  match10-0.html  match10-1.html  match10-link.html  match10-top.html  match10.html  match100-0.html  match100-1.html  match100-link.html  match100-top.html  match100.html  match101-0.html  match101-1.html  match101-link.html  match101-top.html  match101.html  match102-0.html  match102-1.html  match102-link.html  match102-top.html  match102.html  match103-0.html  match103-1.html  match103-link.html  match103-top.html  match103.html  match104-0.html  match104-1.html  match104-link.html  match104-top.html  (+1044 more)
result/jplag_results_exercise3/: index.html  match0-0.html  match0-1.html  match0-top.html  match0.html  match1-0.html  match1-1.html  match1-link.html  match1-top.html  match1.html  match10-0.html  match10-1.html  match10-link.html  match10-top.html  match10.html  match100-0.html  match100-1.html  match100-link.html  match100-top.html  match100.html  match101-0.html  match101-1.html  match101-link.html  match101-top.html  match101.html  match102-0.html  match102-1.html  match102-link.html  match102-top.html  match102.html  match103-0.html  match103-1.html  match103-link.html  match103-top.html  match103.html  match104-0.html  match104-1.html  match104-link.html  match104-top.html  match104.html  (+1047 more)
result/jplag_results_exercise4/: index.html  match0-0.html  match0-1.html  match0-link.html  match0-top.html  match0.html  match1-0.html  match1-1.html  match1-link.html  match1-top.html  match1.html  match2-0.html  match2-1.html  match2-link.html  match2-top.html  match2.html  match3-0.html  match3-1.html  match3-link.html  match3-top.html  match3.html  matches_avg.csv  matches_max.csv  result.xml
src/: CMakeLists.txt  run_dbscan_cluster.cpp  run_simhash_experiment.cpp  test_execution_main.cpp
src/dbscan/: datapoint.cpp  datapoint_mysqlconn_manager.cpp  dbscan.cpp
src/mysql_connector_manager/: mysqlconn_manager.cpp
src/mysql_connector_wrapper/: mysqlconn_wrapper.cpp
src/simhash/: simhash.cpp
src/test_execution/: CMakeLists.txt  Utils.cpp  monitor_test_cases_execution.cpp  test_execution.cpp  test_execution.h  test_execution_config.cpp  test_execution_main.cpp  test_simhash_experiment.cpp
src/utils/: Utils.cpp
